--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 	"dependencies": {
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
+		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"http-errors": "~1.6.3",
 		"luxon": "^3.4.4",
+		"mongodb": "^6.5.0",
 		"morgan": "~1.9.1",
 		"pug": "^3.0.2"
 	}
