--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "node ./bin/www"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"dotenv": "^16.4.5",
@@ -15,6 +16,7 @@
 		"luxon": "^3.4.4",
 		"mongodb": "^6.5.0",
 		"morgan": "~1.9.1",
+		"nodemon": "^3.1.0",
 		"pug": "^3.0.2"
 	}
 }
