--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"mongodb": "^6.5.0",
 		"morgan": "~1.9.1",
 		"nodemon": "^3.1.0",
+		"passport": "^0.7.0",
+		"passport-local": "^1.0.0",
 		"pug": "^3.0.2"
 	}
 }
