--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"connect-flash": "^0.1.1",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-async-handler": "^1.2.0",
+		"express-session": "^1.18.0",
 		"http-errors": "~1.6.3",
 		"luxon": "^3.4.4",
 		"mongodb": "^6.5.0",
@@ -19,6 +21,7 @@
 		"nodemon": "^3.1.0",
 		"passport": "^0.7.0",
 		"passport-local": "^1.0.0",
-		"pug": "^3.0.2"
+		"pug": "^3.0.2",
+		"req-flash": "^0.0.3"
 	}
 }
