--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"express": "^4.19.2",
 		"express-async-handler": "^1.2.0",
 		"express-session": "^1.18.0",
+		"express-validator": "^7.0.1",
 		"http-errors": "~1.6.3",
 		"luxon": "^3.4.4",
 		"mongodb": "^6.5.0",
