--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"http-errors": "~1.6.3",
 		"luxon": "^3.4.4",
 		"mongodb": "^6.5.0",
+		"mongoose": "^8.3.2",
 		"morgan": "~1.9.1",
 		"nodemon": "^3.1.0",
 		"passport": "^0.7.0",
