--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
 		"passport-local": "^1.0.0",
 		"pug": "^3.0.2",
 		"req-flash": "^0.0.3"
+	},
+	"devDependencies": {
+		"@flydotio/dockerfile": "^0.5.5"
 	}
 }
