--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
 	"name": "members-only",
 	"version": "0.0.0",
+	"engines": {
+		"node": ">=16.17.1"
+	},
 	"private": true,
 	"scripts": {
 		"start": "node ./bin/www"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"compression": "^1.7.4",
 		"connect-flash": "^0.1.1",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-async-handler": "^1.2.0",
+		"express-rate-limit": "^7.2.0",
 		"express-session": "^1.18.0",
 		"express-validator": "^7.0.1",
+		"helmet": "^7.1.0",
 		"http-errors": "~1.6.3",
 		"luxon": "^3.4.4",
 		"mongodb": "^6.5.0",
