--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for chatter-zone on 2024-04-19T16:30:32-05:00
+# fly.toml app configuration file generated for chatterzone on 2024-04-20T14:31:50-05:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'chatter-zone'
-primary_region = 'dfw'
+app = 'chatterzone'
+primary_region = 'den'
 
 [build]
 
